# lovcode

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.changeset/: chat-search-highlight.md  fix-build.md  maas-vendor-picker.md  v0-27-0.md  v0_30_0.md
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: claude_web_sync.rs  lib.rs
src/components/: DocumentReader.tsx  GlobalChatSearch.tsx  MarkdownRenderer.tsx  StatusBar.tsx  UpdateChecker.tsx
src/components/FileViewer/: FileViewer.tsx
src/components/GlobalHeader/: GlobalHeader.tsx  VerticalFeatureTabs.tsx
src/components/PanelGrid/: PanelGrid.tsx
src/components/Terminal/: TerminalPane.tsx
src/components/home/: ActivityCard.tsx  RecentActivity.tsx  index.ts
src/components/shared/: ProjectLogo.tsx  ProjectPathLabel.tsx  SessionMenuItems.tsx  index.ts
src/components/ui/: toast.tsx
src/constants/: index.ts
src/hooks/: index.ts  useStreamedSessions.ts  useUrlInit.ts
src/lib/: codeTheme.ts  utils.ts
src/pages/: _layout.tsx  features.tsx  index.tsx  prompt-detail.tsx  search-overlay.tsx
src/pages/events/: index.tsx
src/pages/history/: index.tsx
src/pages/settings/: maas.tsx
src/pages/skills/: [name].tsx  index.tsx
src/store/: index.ts
src/store/atoms/: app.ts  chat.ts  knowledge.ts  settings.ts  ui.ts
src/types/: index.ts  maas.ts
src/views/: index.ts
src/views/Chat/: CollapsibleContent.tsx  ContentBlockRenderer.tsx  FilePreviewContext.tsx  HighlightText.tsx  MessageView.tsx  PathAwareText.tsx  (+9 more)
(+21 files in other folders)
