[package]
name = "lovcode"
version = "0.26.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lovcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
regex = "1"
lazy_static = "1"
tantivy = "0.22"
jieba-rs = "0.7"
notify = "7"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "io-util", "time", "process"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
arboard = "3"
shell-escape = "0.1.5"
zip = "2"
filetime = "0.2"
libc = "0.2.179"
tauri-plugin-updater = { version = "2", features = ["rustls-tls"] }
tauri-plugin-process = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
pbkdf2 = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
security-framework = "3"

